# src/dto/user.dto.ts
@@ -1,0 +1,5 @@
+export interface AuthorDTO {
+    id?: number
+    username: string
+    password: string
+}
